--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <!-- <meta name="viewport" content="width=1024"> -->
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
@@ -17,11 +17,38 @@
 
 
 
-    <title>Hello, world!</title>
+    <title>Your Demo Business Website</title>
 
 </head>
 
 <body>
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+        var chatbox = document.getElementById('fb-customer-chat');
+        chatbox.setAttribute("page_id", "110633044122392");
+        chatbox.setAttribute("attribution", "biz_inbox");
+        window.fbAsyncInit = function () {
+            FB.init({
+                xfbml: true,
+                version: 'v11.0'
+            });
+        };
+
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -79,6 +106,9 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Dignissimos suscipit voluptas id eius ipsa.
                         </p>
+                        <a target="_blank"
+                            href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                            class="btn btn-outline-success"> <i class="bi bi-whatsapp pe-2"></i>Order From Whatsapp</a>
                     </div>
                     <img src="./svg/event.svg" class="img-fluid w-50 d-none d-sm-block" alt="packe delight sitout" />
                 </div>
@@ -92,9 +122,9 @@
                     <h2 class="fw-bold text-uppercase">services</p>
                 </div>
 
-                <div class="d-flex align-items-center justify-content-between mb-3">
-                    <img src="./svg/delivery.svg" class="img-fluid w-50 d-none d-sm-block" alt="packe delight sitout" />
-                    <div class="">
+                <div class="row align-items-center justify-content-between mb-3">
+                    <img src="./svg/delivery.svg" class="img-fluid col-md-5" alt="packe delight sitout" />
+                    <div class="col-md">
                         <h2>Home Delivery</h2>
                         <p class="lead">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nemo totam cupiditate est
@@ -105,8 +135,8 @@
                     </div>
                 </div>
 
-                <div class="d-flex align-items-center justify-content-between">
-                    <div class="">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-md">
                         <h2>Physical Shop</h2>
                         <p class="lead">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid nemo totam cupiditate est
@@ -115,7 +145,7 @@
                         </p>
 
                     </div>
-                    <img src="./svg/shop.svg" class="img-fluid w-50 d-none d-sm-block" alt="packe delight sitout" />
+                    <img src="./svg/shop.svg" class="img-fluid col-md-5" alt="packe delight sitout" />
                 </div>
 
 
@@ -138,7 +168,9 @@
                                 </h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </p>
-                                <a href="#" class="btn btn-dark"> Order now</a>
+                                <a target="_blank"
+                                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                                    class="btn btn-dark"> Order now</a>
 
                             </div>
                         </div>
@@ -154,7 +186,9 @@
                                 </h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </p>
-                                <a href="#" class="btn btn-dark"> Order now</a>
+                                <a target="_blank"
+                                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                                    class="btn btn-dark"> Order now</a>
 
                             </div>
                         </div>
@@ -170,7 +204,9 @@
                                 </h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </p>
-                                <a href="#" class="btn btn-dark"> Order now</a>
+                                <a target="_blank"
+                                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                                    class="btn btn-dark"> Order now</a>
 
                             </div>
                         </div>
@@ -186,7 +222,9 @@
                                 </h3>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 </p>
-                                <a href="#" class="btn btn-dark"> Order now</a>
+                                <a target="_blank"
+                                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                                    class="btn btn-dark"> Order now</a>
                             </div>
                         </div>
                     </div>
@@ -305,31 +343,34 @@
             <!-- Section: Social media -->
             <section class="mb-4">
                 <!-- Facebook -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="bi bi-facebook"></i></a>
+                <a class="btn btn-outline-light btn-floating m-1"
+                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                    role="button"><i class="bi bi-facebook"></i></a>
 
                 <!-- Twitter -->
-                <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                <!-- <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20" role="button"><i
                         class="bi bi-twitter"></i></a> -->
 
                 <!-- Google -->
-                <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                <!-- <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20" role="button"><i
                         class="bi bi-google"></i></a> -->
 
                 <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="bi bi-instagram "></i></a>
+                <a class="btn btn-outline-light btn-floating m-1"
+                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                    role="button"><i class="bi bi-instagram "></i></a>
 
                 <!-- Instagram -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
-                        class="bi bi-whatsapp "></i></a>
+                <a class="btn btn-outline-light btn-floating m-1"
+                    href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20"
+                    role="button"><i class="bi bi-whatsapp "></i></a>
 
                 <!-- Linkedin -->
-                <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                <!-- <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20" role="button"><i
                         class="bi bi-linkedin"></i></a> -->
 
                 <!-- Github -->
-                <!-- <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i
+                <!-- <a class="btn btn-outline-light btn-floating m-1" href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20" role="button"><i
                         class="bi bi-github"></i></a> -->
             </section>
             <!-- Section: Social media -->
@@ -339,7 +380,8 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
             © 2020 Copyright:
-            <a class="text-white" href="#!">businessname.com</a>
+            <a class="text-white"
+                href="https://wa.me/08142368898?text=Hello%2C%20I%20Want%20you%20to%20build%20my%20business%20website%20at%20an%20affordable%20price%20">businessname.com</a>
         </div>
         <!-- Copyright -->
     </footer>
